--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -140,7 +140,6 @@
     "@tryghost/recommendations": "0.0.0",
     "@tryghost/request": "1.0.8",
     "@tryghost/security": "0.0.0",
-    "@tryghost/session-service": "0.0.0",
     "@tryghost/slack-notifications": "0.0.0",
     "@tryghost/social-urls": "0.1.43",
     "@tryghost/string": "0.2.12",
@@ -215,6 +214,7 @@
     "nconf": "0.12.1",
     "node-fetch": "2.7.0",
     "node-jose": "2.2.0",
+    "otplib" : "12.0.1",
     "papaparse": "5.3.2",
     "path-match": "1.2.4",
     "probe-image-size": "7.2.3",
@@ -226,6 +226,7 @@
     "superagent": "5.1.0",
     "superagent-throttle": "1.0.1",
     "tough-cookie": "4.1.4",
+    "ua-parser-js": "1.0.40",
     "xml": "1.0.1"
   },
   "optionalDependencies": {
