--- a/package.json
+++ b/package.json
@@ -77,14 +77,26 @@
   },
   "pnpm": {
     "overrides": {
-        "@tryghost/errors": "^1.3.7",
-        "@tryghost/logging": "2.4.21",
-        "jackspeak": "2.3.6",
-        "moment": "2.24.0",
-        "moment-timezone": "0.5.45",
-        "ember-basic-dropdown": "6.0.2",
-        "ember-in-viewport": "4.1.0"
-    }
+      "@tryghost/errors": "^1.3.7",
+      "@tryghost/logging": "2.4.21",
+      "jackspeak": "2.3.6",
+      "moment": "2.24.0",
+      "moment-timezone": "0.5.45",
+      "ember-basic-dropdown": "6.0.2",
+      "ember-in-viewport": "4.1.0"
+    },
+    "onlyBuiltDependencies": [
+      "core-js",
+      "dtrace-provider",
+      "es5-ext",
+      "esbuild",
+      "fsevents",
+      "msw",
+      "nx",
+      "re2",
+      "sharp",
+      "sqlite3"
+    ]
   },
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
