--- a/apps/admin-x-activitypub/package.json
+++ b/apps/admin-x-activitypub/package.json
@@ -36,7 +36,8 @@
     "@types/react-dom": "18.3.7",
     "jest": "29.7.0",
     "ts-jest": "29.3.4",
-    "vite": "4.5.14"
+    "vite": "4.5.14",
+    "vitest": "0.34.3"
   },
   "nx": {
     "targets": {
