--- a/apps/admin-x-design-system/package.json
+++ b/apps/admin-x-design-system/package.json
@@ -57,7 +57,8 @@
     "typescript": "5.8.3",
     "validator": "13.12.0",
     "vite": "4.5.14",
-    "vite-plugin-svgr": "3.3.0"
+    "vite-plugin-svgr": "3.3.0",
+    "vitest": "0.34.3"
   },
   "dependencies": {
     "@dnd-kit/core": "6.3.1",
