--- a/apps/shade/package.json
+++ b/apps/shade/package.json
@@ -49,7 +49,8 @@
         "eslint-plugin-tailwindcss": "3.18.0",
         "jsdom": "24.1.3",
         "lodash-es": "4.17.21",
-        "mocha": "10.8.2"
+        "mocha": "10.8.2",
+        "vitest": "0.34.3"
     },
     "dependencies": {
         "moment-timezone": "^0.5.48",
