--- a/apps/stats/package.json
+++ b/apps/stats/package.json
@@ -42,7 +42,8 @@
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-svg-map": "2.2.0",
-        "vite": "4.5.14"
+        "vite": "4.5.14",
+        "vitest": "0.34.3"
     },
     "nx": {
         "targets": {
