--- a/compose.yml
+++ b/compose.yml
@@ -6,6 +6,7 @@ x-service-template: &service-template
     - .:/home/ghost
     - ${SSH_AUTH_SOCK}:/ssh-agent
     - ${HOME}/.gitconfig:/root/.gitconfig:ro
+    - node_modules_yarn_lock_hash:/home/ghost/.yarnhash:delegated
     - node_modules_ghost_root:/home/ghost/node_modules:delegated
     - node_modules_ghost_admin:/home/ghost/ghost/admin/node_modules:delegated
     - node_modules_ghost_core:/home/ghost/ghost/core/node_modules:delegated
@@ -135,6 +136,7 @@ services:
 volumes:
   mysql-data: {}
   redis-data: {}
+  node_modules_yarn_lock_hash: {}
   node_modules_ghost_root: {}
   node_modules_ghost_admin: {}
   node_modules_ghost_core: {}
