--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -133,6 +133,7 @@
     "cookie-session": "2.1.0",
     "cookies": "0.9.1",
     "cors": "2.8.5",
+    "countries-and-timezones": "^3.8.0",
     "csso": "5.0.5",
     "csv-writer": "1.6.0",
     "date-fns": "2.30.0",
