--- a/apps/posts/package.json
+++ b/apps/posts/package.json
@@ -19,6 +19,7 @@
         "dev": "vite build --watch",
         "dev:start": "vite",
         "build": "tsc && vite build",
+        "test": "vitest run",
         "test:unit": "vitest run test/unit",
         "lint": "yarn run lint:code && yarn run lint:test",
         "lint:code": "eslint --ext .js,.ts,.cjs,.tsx --cache src",
