--- a/apps/posts/package.json
+++ b/apps/posts/package.json
@@ -23,6 +23,7 @@
         "lint": "yarn run lint:code && yarn run lint:test",
         "lint:code": "eslint --ext .js,.ts,.cjs,.tsx --cache src",
         "lint:test": "eslint -c test/.eslintrc.cjs --ext .js,.ts,.cjs,.tsx --cache test",
+        "lint:fix": "eslint --ext .js,.ts,.cjs,.tsx --cache src --fix",
         "preview": "vite preview"
     },
     "devDependencies": {
