Added ember cli live reload support to nginx

--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -6,6 +6,7 @@ http {
     server {
         listen 80;
 
+        # Ghost server
         location / {
             proxy_pass http://server:2368;
             proxy_set_header Host $host;
@@ -14,6 +15,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Ghost admin
         location /ghost/ {
             proxy_pass http://admin:4200/;
             proxy_set_header Host $host;
@@ -22,7 +24,26 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Ghost admin - Ember CLI live reload
+        location /ember-cli-live-reload.js {
+            proxy_pass http://admin:4200;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Ghost API
         location /ghost/api/ {
+            proxy_pass http://server:2368;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Ghost assets
+        location /ghost/assets/ {
             proxy_pass http://server:2368;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
