--- a/apps/shade/package.json
+++ b/apps/shade/package.json
@@ -53,16 +53,6 @@
         "vitest": "0.34.3"
     },
     "dependencies": {
-        "moment-timezone": "^0.5.48",
-        "react": "18.3.1",
-        "react-dom": "18.3.1",
-        "rollup-plugin-node-builtins": "2.1.2",
-        "sinon": "17.0.1",
-        "storybook": "8.6.14",
-        "typescript": "5.8.3",
-        "validator": "13.12.0",
-        "vite": "4.5.14",
-        "vite-plugin-svgr": "3.3.0",
         "@dnd-kit/core": "6.3.1",
         "@dnd-kit/sortable": "7.0.2",
         "@ebay/nice-modal-react": "1.2.13",
@@ -90,16 +80,28 @@
         "class-variance-authority": "0.7.1",
         "clsx": "2.1.1",
         "lucide-react": "0.503.0",
+        "moment-timezone": "^0.5.48",
+        "next-themes": "^0.4.6",
         "postcss": "8.4.39",
         "postcss-import": "16.1.0",
+        "react": "18.3.1",
         "react-colorful": "5.6.1",
+        "react-dom": "18.3.1",
         "react-hook-form": "7.56.4",
         "react-hot-toast": "2.5.2",
         "react-select": "5.10.1",
         "recharts": "2.15.3",
+        "rollup-plugin-node-builtins": "2.1.2",
+        "sinon": "17.0.1",
+        "sonner": "^2.0.3",
+        "storybook": "8.6.14",
         "tailwind-merge": "2.6.0",
         "tailwindcss": "3.4.17",
         "tailwindcss-animate": "1.0.7",
+        "typescript": "5.8.3",
+        "validator": "13.12.0",
+        "vite": "4.5.14",
+        "vite-plugin-svgr": "3.3.0",
         "zod": "3.25.17"
     },
     "peerDependencies": {
