--- a/apps/shade/tsconfig.json
+++ b/apps/shade/tsconfig.json
@@ -4,7 +4,7 @@
         "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "module": "ESNext",
         "skipLibCheck": true,
-        "types": ["vite/client", "mocha"],
+        "types": ["vite/client"],
 
         /* Bundler mode */
         "moduleResolution": "bundler",
